people profile visit restriction complete css remains

--- a/App/Views/Home/index.html
+++ b/App/Views/Home/index.html
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-    <h1 class="text-center">Welcome To BSG.com.np</h1>
+    <h1 class="text-center">Welcome To INS GROUP</h1>
     <p class="text-center">
         
         It's a page developed and designed by CSIT students of birendra multiple campus.
