--- a/App/Views/Login/new.html
+++ b/App/Views/Login/new.html
@@ -2,32 +2,30 @@
 
 {% block title %}Log in{% endblock %}
 
-{% block body %}
-    <div class="w-50  mx-auto border p-4 my-4">
-        
-        <h1>Log in</h1>
-        
-        <form action="/login/create" method="post">
-            
-            <div class="form-group">
-                <label for="inputEmail">Email address</label>
-                <input type="email" id="inputEmail" name="email" placeholder="Email address" autofocus value="{{ email }}" class="form-control" />
+{% block body %}        
+    <h1 class="text-center">Log in</h1>
+    <div class="justify-content-center d-flex">
+        <div class="row card text-dark bg-warning mb-3">
+            <div>
+                <form action="/login/create" method="post">            
+                    <div class="form-group">
+                        <label for="inputEmail">Email address</label>
+                        <input type="email" id="inputEmail" name="email" placeholder="Email address" autofocus value="{{ email }}" class="form-control" />
+                    </div>
+                    <div class="form-group">
+                        <label for="inputPassword">Password</label>
+                        <input type="password" id="inputPassword" name="password" placeholder="Password" class="form-control" />
+                    </div>
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox" name="remember_me" {% if remember_me %} checked="checked"{% endif %} /> Remember me
+                        </label>
+                    </div>            
+                    <button type="submit" class="btn btn-default">Log in</button>
+                    <a href="/password/forgot">Forgot password?</a>            
+                </form>
             </div>
-            <div class="form-group">
-                <label for="inputPassword">Password</label>
-                <input type="password" id="inputPassword" name="password" placeholder="Password" class="form-control" />
-            </div>
-            <div class="checkbox">
-                <label>
-                    <input type="checkbox" name="remember_me" {% if remember_me %} checked="checked"{% endif %} /> Remember me
-                </label>
-            </div>
-            
-            <button type="submit" class="btn btn-default">Log in</button>
-            <a href="/password/forgot">Forgot password?</a>
-            
-        </form>
-        
+        </div>
     </div>
 {% endblock %}
         
