--- a/App/Views/Signup/new.html
+++ b/App/Views/Signup/new.html
@@ -86,7 +86,7 @@
                     </div>
                     
                     <div class="form-group">
-                        <label for="image">help us to identify you</label>
+                        <label for="image">Help us to identify you</label>
                         <input type="file" class="form-control" id="image" name="image">
                     </div>
                     <div class="form-group">
