--- a/App/Views/Home/index.html
+++ b/App/Views/Home/index.html
@@ -4,14 +4,64 @@
 
 {% block body %}
 
-    <h1 class="text-center">Welcome To INS GROUP</h1>
-    <p class="text-center">
-        
-        It's a page developed and designed by CSIT students of birendra multiple campus.
-    </p>
+<h1 class="text-center " style="color: orange; font-family: Verdana, Geneva, Tahoma, sans-serif;">Welcome To BSG.com.np
+</h1> <br>
+<p class="text-center " style="font-family: Verdana, Geneva, Tahoma, sans-serif; ">
 
-    <div class = "w-100 mx-auto border p-4 my-4" >
-        <p>
+    It's a page developed and designed to bring life in your startup ideas.
+</p>
+
+<div class="w-100 mx-auto border p-4 my-4  " style="position:relative;">
+
+    <div class="card-group" style="font-family: Verdana, Geneva, Tahoma, sans-serif;">
+        <div class="card" style="width: 18rem ; align-items: center; font-family: Verdana, Geneva, Tahoma, sans-serif;">
+
+            <div class="card-body">
+                <p>
+                <h1 class="card-text " style="margin-bottom: 65px; color: orange; text-align: center;">Why is this page
+                    developed?</h1>
+                <hr>
+                This page was developed inorder to help students and general people to
+                rise financial and other help to needed one.
+                <h5 style="color: orange;">What for students?</h5>
+                Students can post their startup ideas their details for invester to attract so that they
+                need not to scramble here and there for invester. Students can find lots of invester in
+                our page who can invest on you if your startup plan is really good.
+                <h5 style="color: orange;">What for general public?</h5>
+                General public can post their emmergency help post so that anyone near them can help them.
+                </p>
+
+            </div>
+
+        </div>
+
+        <div class="card"
+            style="width: 18rem ; font-weight: 500; align-items: center; font-family: Verdana, Geneva, Tahoma, sans-serif;">
+
+
+            <div class="card-body">
+                <p class="card-text">
+                <h1 style="color: orange; text-align: center; ">For whom is this page developed?</h1>
+                <hr>
+                This page was developed for students and general public.
+                <h5 style="color: orange;">What for students?</h5>
+                Students can post their startup ideas their details for invester to attract so that they
+                need not to scramble here and there for invester. Students can find lots of invester in
+                our page who can invest on you if your startup plan is really good.
+                <h5 style="color: orange;">What for general public?</h5>
+                General public can post their emmergency help post so that anyone near them can help them.
+                </p>
+
+            </div>
+        </div>
+        <!-- <h1 class="text-center">Welcome To INS GROUP</h1>
+        <p class="text-center">
+
+            It's a page developed and designed by CSIT students of birendra multiple campus.
+        </p>
+
+        <div class="w-100 mx-auto border p-4 my-4">
+            <p>
             <h1>Why is this page developed?</h1>
             <hr>
             This page was developed inorder to help students and general people to
@@ -22,23 +72,20 @@
             our page who can invest on you if your startup plan is really good.
             <h5>What for general public?</h5>
             General public can post their emmergency help post so that anyone near them can help them.
-        </p>
+            </p>
+        </div> -->
+
+
+
+
+
+
     </div>
-    <div class = "w-100 mx-auto border p-4 my-4" >
-        <p>
-            <h1>For whom is this page developed?</h1>
-            <hr>
-            This page was developed for students and general public.
-            <h5>What for students?</h5>
-            Students can post their startup ideas their details for invester to attract so that they
-            need not to scramble here and there for invester. Students can find lots of invester in
-            our page who can invest on you if your startup plan is really good.
-            <h5>What for general public?</h5>
-            General public can post their emmergency help post so that anyone near them can help them.
-        </p>
-    </div>  
+    <!-- <div class = "w-100 mx-auto border p-4 my-4" > -->
+
+</div>
 
 
-    
+
 
 {% endblock %}
