--- a/App/Views/Login/new.html
+++ b/App/Views/Login/new.html
@@ -1,31 +1,65 @@
 {% extends "base.html" %}
 
+
+
 {% block title %}Log in{% endblock %}
 
-{% block body %}        
-    <h1 class="text-center">Log in</h1>
-    <div class="justify-content-center d-flex">
-        <div class="row card text-dark bg-warning mb-3">
-            <div>
-                <form action="/login/create" method="post">            
-                    <div class="form-group">
-                        <label for="inputEmail">Email address</label>
-                        <input type="email" id="inputEmail" name="email" placeholder="Email address" autofocus value="{{ email }}" class="form-control" />
-                    </div>
-                    <div class="form-group">
-                        <label for="inputPassword">Password</label>
-                        <input type="password" id="inputPassword" name="password" placeholder="Password" class="form-control" />
-                    </div>
-                    <div class="checkbox">
-                        <label>
-                            <input type="checkbox" name="remember_me" {% if remember_me %} checked="checked"{% endif %} /> Remember me
-                        </label>
-                    </div>            
-                    <button type="submit" class="btn btn-default">Log in</button>
-                    <a href="/password/forgot">Forgot password?</a>            
-                </form>
+{% block body %}
+
+<div style="align-items: center; margin: 15px;;">
+
+
+
+    <div class="w-50  mx-auto border p-4 my-4"
+        style="box-shadow: 2px 2px 5px orange; border-radius: 10px; margin-bottom: 10px;  justify-content: center;">
+
+        <h1 style="color: orange;">Log in</h1>
+
+        <form action="/login/create" method="post">
+
+            <div class="form-group">
+                <label for="inputEmail" style="color: orange;">Email address</label>
+                <input type="email" id="inputEmail" name="email" placeholder="Email address" autofocus
+                    value="{{ email }}" class="form-control" />
             </div>
-        </div>
+            <div class="form-group">
+                <label for="inputPassword" style="color: orange;">Password</label>
+                <input type="password" id="inputPassword" name="password" placeholder="Password"
+                    class="form-control  " />
+
+            </div>
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox" name="remember_me" {% if remember_me %} checked="checked" {% endif %} /> <a
+                        style="color: orange;"> Remember
+                        me </a>
+                </label>
+            </div>
+            <ul style="list-style-type: none; padding: 5px;">
+                <li style="padding-bottom: 9px;"> <button type="submit" class=" logbtn  btn btn-default">Log in</button></li>
+                <li>
+                    <a href="/password/forgot" class="logbtn">Forgot password?</a>
+                </li>
+            </ul>
+
+
+        </form>
+
     </div>
+</div>
+<style>
+    .logbtn {
+        background-color: orange;
+        color: black;
+        padding: 5px;
+        border-radius: 8px;
+        margin-top: 5px;
+        text-decoration: none;
+    }
+
+    .logbtn:hover {
+        background-color: rgb(252, 192, 80);
+        color: white;
+    }
+</style>
 {% endblock %}
-        
