--- a/App/Views/Password/forgot.html
+++ b/App/Views/Password/forgot.html
@@ -4,16 +4,40 @@
 
 {% block body %}
 
-    <h1>Request password reset</h1>
+    <h1 style="color: orange; text-align: center; ;">Request password reset</h1>
+
+    <div  style="text-align: center; " class="px-5">
 
     <form method="post" action="/password/request-reset">
 
-        <div class="form-group">
-            <label for="inputEmail">Email address</label>
+        <div class="form-group ">
+            <label for="inputEmail" style="color: orange;">Email address</label>
             <input type="email" id="inputEmail" name="email" placeholder="Email address" autofocus required class="form-control" />
         </div>
 
-        <button type="submit" class="btn btn-default">Send password reset</button>
+        <button type="submit" class=" sendprbtn btn btn-default" style="text-align: center; margin-top: 10px;" >Send password reset</button>
     </form>
+    </div>
+
+
+    <style>
+        .sendprbtn {
+            background-color: orange;
+    
+            padding: 10px;
+            text-align: center;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            color: black;
+            text-decoration: none;
+            border-radius: 9px;
+        }
+    
+    
+        .sendprbtn:hover {
+            background-color: rgb(255, 199, 96);
+            color: white;
+            box-shadow: 0.2px 0.2px 10px black;
+        }
+    </style>
 
 {% endblock %}
