--- a/App/Views/Profile/edit.html
+++ b/App/Views/Profile/edit.html
@@ -3,93 +3,130 @@
 {% block title %}Profile{% endblock %}
 
 {% block footer %}
-    <script src="/js/hideShowPassword.min.js"></script>
-    <script src="/js/app.js"></script>
+<script src="/js/hideShowPassword.min.js"></script>
+<script src="/js/app.js"></script>
 
-    <script>
-        $(document).ready(function() {
+<script>
+    $(document).ready(function () {
 
-            var userId = '{{ user.id }}';
+        var userId = '{{ user.id }}';
 
-            /**
-             * Validate the form
-             */
-            $('#formProfile').validate({
-                rules: {
-                    name: 'required',
-                    email: {
-                        required: true,
-                        email: true,
-                        remote: {
-                            url: '/account/validate-email',
-                            data: {
-                                ignore_id: function() {
-                                    return userId;
-                                }
+        /**
+         * Validate the form
+         */
+        $('#formProfile').validate({
+            rules: {
+                name: 'required',
+                email: {
+                    required: true,
+                    email: true,
+                    remote: {
+                        url: '/account/validate-email',
+                        data: {
+                            ignore_id: function () {
+                                return userId;
                             }
                         }
-                    },
-                    password: {
-                        minlength: 6,
-                        validPassword: true
                     }
                 },
-                messages: {
-                    email: {
-                        remote: 'email already taken'
-                    }
+                password: {
+                    minlength: 6,
+                    validPassword: true
                 }
-            });
-
-
-            /**
-              * Show password toggle button
-              */
-            $('#inputPassword').hideShowPassword({
-                show: false,
-                innerToggle: 'focus'
-            });
+            },
+            messages: {
+                email: {
+                    remote: 'email already taken'
+                }
+            }
         });
-    </script>
+
+
+        /**
+          * Show password toggle button
+          */
+        $('#inputPassword').hideShowPassword({
+            show: false,
+            innerToggle: 'focus'
+        });
+    });
+</script>
 
 {% endblock %}
 
 {% block body %}
 
-    <h1>Profile</h1>
 
-    {% if user.errors is not empty  %}
+<div class="card" style="height: 600px; justify-content: center;  align-items: center;">
+
+
+    <div style=" text-align: center;">
+
+        <h1 style="color: orange;">Edit Profile</h1>
+
+        {% if user.errors is not empty %}
         <p>Errors:</p>
         <ul>
             {% for error in user.errors %}
-                <li>{{ error }}</li>
+            <li>{{ error }}</li>
             {% endfor %}
         </ul>
-    {% endif %}
+        {% endif %}
 
-    <form method="post" id="formProfile" action="/profile/update" enctype="multipart/form-data">
+        <form method="post" id="formProfile" action="/profile/update" enctype="multipart/form-data">
 
-        <div class="form-group">
-            <label for="inputName">Name</label>
-            <input id="inputName" name="name" placeholder="Name" value="{{ user.name }}" required class="form-control" />
-        </div>
-        <div class="form-group">
-            <label for="inputEmail">Email address</label>
-            <input id="inputEmail" name="email" placeholder="email address" value="{{ user.email }}" required type="email" disabled class="form-control" />
-        </div>
-        <div class="form-group">
-            <label for="image">help us to identify you</label>
-            <input type="file" class="form-control" id="image" name="image">
-        </div>
-        <div class="form-group">
-            <label for="inputPassword">Password</label>
-            <input type="password" id="inputPassword" name="password" placeholder="Password" aria-describedby="helpBlock" class="form-control" />
-            <span id="helpBlock" class="help-block">Leave blank to keep current password</span>
-        </div>
+            <div class="form-group ">
+                <label for="inputName" style="color: orange;  ">Name</label>
+                <input id="inputName" style="border-radius: 40px; " name="name" placeholder="Name"
+                    value="{{ user.name }}" required class="form-control" />
+            </div>
+            <div class="form-group">
+                <label for="inputEmail" style="color: orange;">Email address</label>
+                <input id="inputEmail" name="email" style="border-radius: 40px;" placeholder="email address"
+                    value="{{ user.email }}" required type="email" disabled class="form-control" />
+            </div>
+            <div class="form-group">
+                <label for="image" style="color: orange;">help us to identify you</label>
+                <input type="file" class="form-control" style="border-radius: 40px;" id="image" name="image">
+            </div>
+            <div class="form-group">
+                <label for="inputPassword" style="color: orange;">Password</label>
+                <input type="password" id="inputPassword" style="border-radius: 40px;" name="password"
+                    placeholder="Password" aria-describedby="helpBlock" class="form-control" />
+                <span id="helpBlock" class="help-block">Leave blank to keep current password</span>
+            </div>
+            <ul style="list-style-type: none;">
 
-        <button type="submit" class="btn btn-default">Save</button>
-        <a href="/profile/show">Cancel</a>
 
-    </form>
+
+                <li> <button type="submit" class=" savebtn btn btn-default ">Save</button> </li>
+                <li> <a href="/profile/show" class="savebtn">Cancel</a> </li>
+            </ul>
+        </form>
+    </div>
+</div>
+
+<style>
+    .savebtn {
+        color: black;
+       
+        background-color: orange;
+        border-radius: 40px;
+        padding-left: 10px;
+        padding-right: 10px;
+        padding-top: 5px;
+        padding-bottom: 5px;
+        margin: 10px;
+        text-decoration: none;
+        
+
+
+    }
+
+    .savebtn:hover {
+        background-color: rgb(255, 198, 93);
+        color: white;
+    }
+</style>
 
 {% endblock %}
