--- a/App/Views/Profile/visit.html
+++ b/App/Views/Profile/visit.html
@@ -4,15 +4,23 @@
 
 {% block body %}
 
-    <h1>Profile</h1>
-    <img src="/images/profile/{{ user.image }}" class="img-fluid border border-additive" width="74" height="74" alt="Profile picture" >
+<!-- <h1>Profile</h1>
+<img src="/images/profile/{{ user.image }}" class="img-fluid border border-additive" width="74" height="74"
+    alt="Profile picture"> -->
+<div style="text-align: center;">
 
-    <dl class="dl-horizontal">
-        <dt>Name</dt>
+    <h1 style="justify-content: center; text-align: center; color: orange;">Profile</h1>
+    <div style="height: 200px; width: 200px;   border-radius: 50%;  display: inline-block; ">
+        <img src="/images/profile/{{ user.image }}" class="img-fluid border border-additive"
+            style="height: 200px; width: 200px; object-fit: cover;   border-radius: 50%; " alt="Profile picture">
+    </div>
+
+    <dl class="dl-horizontal" style="text-align: center; justify-content: center;">
+        <dt style="color: orange;">Name </dt>
         <dd>{{ user.name }}</dd>
-        <dt>email</dt>
+        <dt style="color: orange;">Email</dt>
         <dd>{{ user.email }}</dd>
-        <dt>Signup Category</dt>
+        <dt style="color: orange;">Signup Category</dt>
         {% if user.catogery == "Signup as student" %}
         <dd>Student</dd>
         {% else %}
@@ -20,70 +28,101 @@
         {% endif %}
     </dl>
     {% if user.id == current_user.id %}
-        <a href="/profile/edit">Edit</a>
-    {% endif %}    
-    <div class="justify-content-center d-flex">
+    <a href="/profile/edit" class="editbtn">Edit</a>
+    {% endif %}
+    <div class="justify-content-center d-flex mt-4">
         <div class="row">
             <div>
                 {% for details in user_posts %}
-                    {% if current_user.id == user.id %}
-                        <div class="card text-dark bg-warning mb-3">
-                            <div class="card-header">
-                                <a href="/people/profile-visit?id={{ details.user_id }}"><b>{{ user.name }}</b></a> posted on <b>{{ details.catogery }}</b>
-                                {% if current_user.id == details.user_id %}
-                                <a href="/post/edit?post_id={{ details.id }}">edit</a>
-                                {% endif %}
-                            </div>
-                            <div class="card-body">
-                                <h3 class="card-title">{{ details.title }}</h3>
-                                <p class="card-text">{{ details.discription }}</p>
-                            </div>
-                            <!-- <button type="submit">Help</button> -->
-                        </div>
-                    {% else %}
-                        {% if details.catogery == "Emergency Help"  %}
-                            <div class="card text-dark bg-warning mb-3">
-                                <div class="card-header">
-                                    <a href="/people/profile-visit?id={{ details.user_id }}"><b>{{ user.name }}</b></a> posted on <b>{{ details.catogery }}</b>
-                                </div>
-                                <div class="card-body">
-                                    <h3 class="card-title">{{ details.title }}</h3>
-                                    <p class="card-text">{{ details.discription }}</p>
-                                </div>
-                                <!-- <button type="submit">Help</button> -->
-                            </div>
+                {% if current_user.id == user.id %}
+                <div class="card text-dark bg-warning mb-3">
+                    <div class="card-header">
+                        <a href="/people/profile-visit?id={{ details.user_id }}"><b style=" color: black;">You</b></a>
+                        posted on
+                        <b>{{
+                            details.catogery }}</b>
+                        {% if current_user.id == details.user_id %}
+                        <a href="/post/edit?post_id={{ details.id }}">edit</a>
                         {% endif %}
-                        {% if current_user %}
-                            {% if current_user.catogery == "Signup as student" and details.catogery == "Seeking to invest" %}
-                                <div class="card text-dark bg-warning mb-3">
-                                    <div class="card-header">
-                                        <a href="/people/profile-visit?id={{ details.user_id }}"><b>{{ user.name }}</b></a> posted on <b>{{ details.catogery }}</b>
-                                    </div>
-                                    <div class="card-body">
-                                        <h3 class="card-title">{{ details.title }}</h3>
-                                        <p class="card-text">{{ details.discription }}</p>
-                                    </div>
-                                    <!-- <button type="submit">Help</button> -->
-                                </div>
-                            {% endif %}
+                    </div>
+                    <div class="card-body">
+                        <h3 class="card-title">{{ details.title }}</h3>
+                        <p class="card-text">{{ details.discription }}</p>
+                    </div>
+                    <!-- <button type="submit">Help</button> -->
+                </div>
+                {% else %}
+                {% if details.catogery == "Emergency Help" %}
+                <div class="card text-dark bg-warning mb-3">
+                    <div class="card-header">
+                        <a href="/people/profile-visit?id={{ details.user_id }}"><b>{{ user.name }}</b></a> posted on
+                        <b>{{
+                            details.catogery }}</b>
+                    </div>
+                    <div class="card-body">
+                        <h3 class="card-title">{{ details.title }}</h3>
+                        <p class="card-text">{{ details.discription }}</p>
+                    </div>
+                    <!-- <button type="submit">Help</button> -->
+                </div>
+                {% endif %}
+                {% if current_user %}
+                {% if current_user.catogery == "Signup as student" and details.catogery == "Seeking to invest" %}
+                <div class="card text-dark bg-warning mb-3">
+                    <div class="card-header">
+                        <a href="/people/profile-visit?id={{ details.user_id }}"><b>{{ user.name }}</b></a> posted on
+                        <b>{{
+                            details.catogery }}</b>
+                    </div>
+                    <div class="card-body">
+                        <h3 class="card-title">{{ details.title }}</h3>
+                        <p class="card-text">{{ details.discription }}</p>
+                    </div>
+                    <!-- <button type="submit">Help</button> -->
+                </div>
+                {% endif %}
 
-                            {% if current_user.catogery == "Signup as invester" and details.catogery == "Seeking for invester" %}
-                                <div class="card text-dark bg-warning mb-3">
-                                    <div class="card-header">
-                                        <a href="/people/profile-visit?id={{ details.user_id }}"><b>{{ user.name }}</b></a> posted on <b>{{ details.catogery }}</b>
-                                    </div>
-                                    <div class="card-body">
-                                        <h3 class="card-title">{{ details.title }}</h3>
-                                        <p class="card-text">{{ details.discription }}</p>
-                                    </div>
-                                    <!-- <button type="submit">Help</button> -->
-                                </div>
-                            {% endif %}
-                        {% endif %}
-                    {% endif %}
-                {% endfor %}    
+                {% if current_user.catogery == "Signup as invester" and details.catogery == "Seeking for invester" %}
+                <div class="card text-dark bg-warning mb-3">
+                    <div class="card-header">
+                        <a href="/people/profile-visit?id={{ details.user_id }}"><b>{{ user.name }}</b></a> posted on
+                        <b>{{
+                            details.catogery }}</b>
+                    </div>
+                    <div class="card-body">
+                        <h3 class="card-title">{{ details.title }}</h3>
+                        <p class="card-text">{{ details.discription }}</p>
+                    </div>
+                    <!-- <button type="submit">Help</button> -->
+                </div>
+                {% endif %}
+                <!-- {% endif %}
+            {% endif %}
+            {% endfor %} -->
             </div>
         </div>
     </div>
+</div>
+
+<style>
+    .editbtn {
+        background-color: orange;
+        text-decoration: none;
+        color: black;
+        padding-top: 5px;
+        padding-bottom: 5px;
+        padding-left: 20px;
+        padding-right: 20px;
+        border-radius: 50px;
+        margin: 5px;
+
+    }
+
+    .editbtn:hover {
+        background-color: rgb(241, 188, 90);
+        color: white;
+    }
+</style>
+
 
 {% endblock %}
