--- a/App/Views/Signup/new.html
+++ b/App/Views/Signup/new.html
@@ -3,109 +3,130 @@
 {% block title %}Sign up{% endblock %}
 
 {% block footer %}
-    <script src="/js/hideShowPassword.min.js"></script>
-    <script src="/js/app.js"></script>
+<script src="/js/hideShowPassword.min.js"></script>
+<script src="/js/app.js"></script>
 
-    <script>
-        $(document).ready(function() {
+<script>
+    $(document).ready(function () {
 
-            /**
-             * Validate the form
-             */
-            $('#formSignup').validate({
-                rules: {
-                    name: 'required',
-                    email: {
-                        required: true,
-                        email: true,
-                        remote: '/account/validate-email'
-                    },
-                    password: {
-                        required: true,
-                        minlength: 6,
-                        validPassword: true
-                    }
+        /**
+         * Validate the form
+         */
+        $('#formSignup').validate({
+            rules: {
+                name: 'required',
+                email: {
+                    required: true,
+                    email: true,
+                    remote: '/account/validate-email'
                 },
-                messages: {
-                    email: {
-                        remote: 'email already taken'
-                    }
+                password: {
+                    required: true,
+                    minlength: 6,
+                    validPassword: true
                 }
-            });
-
-
-            /**
-              * Show password toggle button
-              */
-            $('#inputPassword').hideShowPassword({
-                show: false,
-                innerToggle: 'focus'
-            });
+            },
+            messages: {
+                email: {
+                    remote: 'email already taken'
+                }
+            }
         });
-    </script>
+
+
+        /**
+          * Show password toggle button
+          */
+        $('#inputPassword').hideShowPassword({
+            show: false,
+            innerToggle: 'focus'
+        });
+    });
+</script>
 
 {% endblock %}
 
 {% block body %}
-    <h1 class="text-center" >Sign up</h1>
-        {% if user.errors is not empty %}
-            <div class="alert alert-danger">
-                <p>Errors:</p>
-                <ul>
-                    {% for error in user.errors %}
-                    <li>{{ error }}</li>
-                    {% endfor %}
-                </ul>
-            </div>      
-        {% endif %}  
-    <div class="justify-content-center d-flex">
-        <div class="row card text-dark bg-warning mb-3">
-            <div>
-                <form method="post" action="/signup/create" id="formSignup" enctype="multipart/form-data"> 
-                    <div class="form-group">
-                        <label for="inputName">Name</label>
-                        <input id="inputName" name="name" placeholder="Name" autofocus value="{{ user.name }}" required class="form-control" />
-                    </div>
-                    <div class="form-group">
-                        <label for="inputEmail">Email address</label>
-                        <input id="inputEmail" name="email" placeholder="email address" value="{{ user.email }}" required type="email" class="form-control" />
-                    </div>
-                    
-                    <div class="form-group">
-                        <label for="gender">Please Select Gender</label>
-                        <select class="form-control " id="gender" name="gender" required>
-                            <option value="male">Male</option>
-                            <option value="female">Female</option>
-                            <option value="none">Rather not say</option>
-                        </select>
-                    </div>
-                    
-                    <div class="form-group">
-                        <label for="dob">Date Of Birth:</label>
-                        <input type="date" class="form-control " id="dob" name="dob" min="1910-12-12" max="<?php echo date('Y-m-d')?>" required>
-                    </div>
-                    
-                    <div class="form-group">
-                        <label for="image">Help us to identify you</label>
-                        <input type="file" class="form-control" id="image" name="image">
-                    </div>
-                    <div class="form-group">
-                        <label for="inputPassword">Password</label>
-                        <input type="password" id="inputPassword" name="password" placeholder="Password" required class="form-control" />
-                    </div>
-                    
-                    <div class="form-group">
-                        <label for="sel1">Select Signup Category:</label>
-                        <select class="form-control" id="sel1" name="catogery" required>
-                            <option value="Signup as student">Signup as Student</option>
-                            <option value="Signup as invester">Signup as Invester</option>
-                        </select>
-                    </div>
-                    
-                    <button type="submit" class="btn btn-default">Sign up</button> 
-                </form>
-            </div>
+
+<div class="w-50  mx-auto border p-4 my-4"
+    style="box-shadow: 2px 2px 5px orange; border-radius: 10px; margin-bottom: 10px;">
+
+    <h1 style="color: orange;">Sign up</h1>
+
+    {% if user.errors is not empty %}
+    <p>Errors:</p>
+    <ul>
+        {% for error in user.errors %}
+        <li>{{ error }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+
+    <form method="post" action="/signup/create" id="formSignup" enctype="multipart/form-data">
+
+        <div class="form-group">
+            <label for="inputName" style="color: orange;">Name</label>
+            <input id="inputName" name="name" placeholder="Name" autofocus value="{{ user.name }}" required
+                class="form-control" />
         </div>
-    </div>
+        <div class="form-group">
+            <label for="inputEmail" style="color: orange;">Email address</label>
+            <input id="inputEmail" name="email" placeholder="email address" value="{{ user.email }}" required
+                type="email" class="form-control" />
+        </div>
+
+        <div class="form-group">
+            <label for="gender" style="color: orange;">Please Select Gender</label>
+            <select class="form-control " id="gender" name="gender" required>
+                <option value="male">Male</option>
+                <option value="female">Female</option>
+                <option value="none">Rather not say</option>
+            </select>
+        </div>
+
+        <div class="form-group">
+            <label for="dob" style="color: orange;">Date Of Birth:</label>
+            <input type="date" class="form-control " id="dob" name="dob" min="1910-12-12"
+                 required>
+        </div>
+
+        <div class="form-group">
+            <label for="image" style="color: orange;">help us to identify you</label>
+            <input type="file" class="form-control" id="image" name="image">
+        </div>
+        <div class="form-group">
+            <label for="inputPassword" style="color: orange;">Password</label>
+            <input type="password" id="inputPassword" name="password" placeholder="Password" required
+                class="form-control" />
+        </div>
+
+        <div class="form-group">
+            <label for="sel1" style="color: orange;">Select Signup Category:</label>
+            <select class="form-control" id="sel1" name="catogery" required>
+                <option value="Signup as student">Signup as Student</option>
+                <option value="Signup as invester">Signup as Invester</option>
+            </select>
+        </div>
+
+        <button type="submit" class=" signbtn btn btn-default">Sign up</button>
+
+    </form>
+
+</div>
+<style>
+    .signbtn {
+        color: black;
+        background-color: orange;
+        padding: 5px;
+        margin-top: 15px;
+        border-radius: 8px;
+
+    }
+
+    .signbtn:hover {
+        background-color: rgb(252, 190, 76);
+        color: white;
+        box-shadow: 0.2px 0.2px 5px orange;
+    }
+</style>
 {% endblock %}
-        
