--- a/App/Views/base.html
+++ b/App/Views/base.html
@@ -1,31 +1,40 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{% block title %}{% endblock %}</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1 ,">
+    <title>nabin{% block title %}{% endblock %}</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="/css/styles.css" />
+    
 </head>
-<body>
-    <div class="">
-        <nav class="navbar navbar-expand-lg navbar-light bg-warning">
+
+<body class=" mt-0">
+    <div class="card">
+        <nav class="navbar navbar-expand-lg mb-2 navbar-light bg-warning " style="filter: drop-shadow(3px 1px 4px );">
             <div class="container-fluid">
-                <div class="navbar-brand">                 
-                    <a class="btn" href="/"><h6>INS G.</h6></a>          
-                </div>     
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                <div class="navbar-brand">
+                    <a class="btn" href="/">
+                        <h6>INS G.</h6>
+                    </a>
+                </div>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                        
+
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="/post/show">Post</a>
                         </li>
                         <form method="GET" action="/people/search" class="d-flex">
-                            <input name="search" class="form-control me-2" type="search" placeholder="Search" value="{{ searched }}" aria-label="Search">
+                            <input name="search" class="form-control me-2" type="search" placeholder="Search"
+                                value="{{ searched }}" style="border-radius: 25px; border: orange; border-width: 0.3px;" aria-label="Search">
                             <!-- <button class="btn btn-default" type="submit">
                             <i class="glyphicon glyphicon-search"></i>
                             </button> -->
@@ -40,12 +49,12 @@
                             <a class="nav-link" href="/logout">Log out</a>
                         </li>
                         {% else %}
-                        <li class="nav-item" >
+                        <li class="nav-item">
                             <a class="nav-link" href="/signup/new">Sign up</a>
                         </li>
-                        <li class="nav-item" >
+                        <li class="nav-item">
                             <a class="nav-link" href="/login">log in</a>
-                        </li>                         
+                        </li>
                         {% endif %}
                     </ul>
                 </div>
@@ -53,19 +62,40 @@
         </nav>
     </div>
     {% for message in flash_messages %}
-        <div class="alert alert-{{ message.type }}">
-            {{ message.body }}
-        </div>
+    <div class="  alert alert-{{ message.type }}">
+        {{ message.body }}
+    </div>
     {% endfor %}
 
     {% block body %}
     {% endblock %}
 
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"
+        integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
     <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.15.0/jquery.validate.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
     {% block footer %}
     {% endblock %}
+    <footer class="" style="background-color: orange; padding: 2px;   position: fixed;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    "  >
+        <nav class="" style=" text-align: center;">
+            <h4 class="" style="font-family: Verdana, Geneva, Tahoma, sans-serif; font-size: 20px;">@2021 copyright</h4>
+        </nav>
+    </footer>
 
 </body>
+
 </html>
+
+<style>
+    body{
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+</style>
